changed footer, fixed overflow space on the right

--- a/landing_page.css
+++ b/landing_page.css
@@ -7,6 +7,7 @@ body {
     font-family: "inter-variable", sans-serif;
     width: 100%;
     height: 100%;
+    overflow-x: hidden;
 }
 
 .navbar {
@@ -304,10 +305,6 @@ a:hover {
     background: #F5E4FF;
 }
 
-.logo-footer {
-    padding: 5vw;
-}
-
 .sticky-parent {
     height: 200vh;
 }
@@ -334,3 +331,13 @@ a:hover {
     margin-right: 35vw;
 }
 
+.logo-footer {
+    padding: 10vw 0 0 0;
+}
+
+.footer {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: right;
+}
